added an imagefor portfolio project page

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <div class="span4 center">
                         <img src="assets/images/pages/features/about04.png" alt="Resposive Design">
                         <h5>Web Design & Development</h5>
-                        <p class="smallFontBy08 cutBy10">Creates clean and simple designs for web and mobile projects from concept through launch. Focuses on delivering audiences with beautiful, memorable, and easy-to-navigate online experiences.
+                        <p class="smallFontBy08 cutBy10">I create clean and simple designs for web and mobile projects from concept through launch. I focus on delivering audiences with beautiful, memorable, and easy-to-navigate online experiences.
                         <!-- <br>
                             <em class="points">Responsive & Mobile Ready Design</em> -->
                         </p>
@@ -325,7 +325,7 @@
                     <div class="span4 center">
                         <img src="assets/images/pages/features/about05.png" alt="Logo">
                         <h5>Visual Identity Design</h5>
-                        <p class="smallFontBy08 cutBy10">Develops the solution that best expresses your personality and business needs through compelling brand identity.
+                        <p class="smallFontBy08 cutBy10">I develop the solution that best expresses your personality and business needs through compelling brand identity.
                         <!-- <br>
                             <em class="points">Logo, Stationary, Marketing Collateral Design</em> -->
                         </p>
@@ -333,7 +333,7 @@
                     <div class="span4 center">
                         <img src="assets/images/pages/features/about07.png" alt="illustration">
                         <h5>Illustration</h5>
-                        <p class="smallFontBy08 cutBy10">Possess highly refined conceptual and rendering skills for digital graphic and freehand illustration.</p>
+                        <p class="smallFontBy08 cutBy10">I have highly refined conceptual and rendering skills for digital graphic and freehand illustration.</p>
                     </div>
                 </div>
                 <!-- Testemonials -->
