--- a/pages/portfolio/project_1.html
+++ b/pages/portfolio/project_1.html
@@ -8,7 +8,7 @@
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Vita Worldwide</h5>
+            <h5>Architect's Artist</h5>
             <article class="smallFontBy08">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
@@ -17,7 +17,7 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <a href="http://www.architectsartist.com/" class="smallFontBy08">www.architectsartist.com</a>
             </section>
             
             <div class="social-icons sicon-black bordered bordered-black">
