project 4 image added

--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
             <!-- End Article -->
             
             <!-- Footer -->
-            <footer>
+            <!-- <footer>
                 <div class="show-more-cube">
                      <a href="#pages/portfolio/readmore.html" data-destination="plugin-filter-elements" data-insert="appendTo" data-action="remove">
                         <span>Show<br/>More</span>
                     </a>
                 </div>
-            </footer>
+            </footer> -->
             <!-- End footer -->
         </div>
     </div>
