--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -1,14 +1,14 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/da-logo.png">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Avatar</h5>
+            <h5>Davina Amiri Law - Logo Design</h5>
             <article class="smallFontBy08">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
@@ -17,21 +17,21 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <a href="http://www.davinaamirilaw.com/" class="smallFontBy08">www.davinaamirilaw.com</a>
             </section>
             
-            <div class="social-icons sicon-black bordered bordered-black">
+            <!-- <div class="social-icons sicon-black bordered bordered-black">
                 <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
                 <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
                 <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
                 <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
                 <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
+            </div> -->
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Photography</span>
+                        <span>Branding: Identity Design</span>
                     </li>
                 </ul>
             </div>
