modified logo to svg format and added content on project page.

--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -8,11 +8,11 @@
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Davina Amiri Law - Logo Design</h5>
+            <h5>Davina Amiri Law</h5>
             <article class="smallFontBy08">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                <p class="background">
+                    Davina is a transactional attorney, focusing on Entertainment, Intellectual Property, Real Estate and Business matters since 2006. She negotiates agreements on behalf of artists such as musicians, film makers, entrepreneurs, and designers to name a few. Davina provides legal counsel to a vast breath of businesses such as talent agencies, management, production and technology companies or start-ups in New York.<br/>
+                    Davina commissioned Rosa to develop a visual identity and website that reflects the nature of her sophisticated work and provides a platform for her other legal practices. The result was a minimalistic identity design with her initials.
                 </p>
             </article>
             <section class="website">
@@ -31,7 +31,7 @@
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Branding: Identity Design</span>
+                        <span class:"disciplines">Disciplines: <br/>Branding/Identity Design</span>
                     </li>
                 </ul>
             </div>
