modified an image file as color was off - switched CMYK to RGB.

--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -1,7 +1,7 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="assets/images/pages/work/da-logo.jpg">
+            <img src="assets/images/pages/work/da-logo1.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
@@ -31,7 +31,7 @@
             <div class="submenu">
                 <ul>
                     <li>
-                        <span class:"disciplines">Disciplines: <br/>Branding/Identity Design</span>
+                        <span class:"disciplines">Disciplines: Branding/Identity Design</span>
                     </li>
                 </ul>
             </div>
