added content for portfolio pages.

--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -11,27 +11,19 @@
             <h5>Davina Amiri Law</h5>
             <article class="smallFontBy08">
                 <p class="background">
-                    Davina is a transactional attorney, focusing on Entertainment, Intellectual Property, Real Estate and Business matters since 2006. She negotiates agreements on behalf of artists such as musicians, film makers, entrepreneurs, and designers to name a few. Davina provides legal counsel to a vast breath of businesses such as talent agencies, management, production and technology companies or start-ups in New York.<br/>
-                    Davina commissioned Rosa to develop a visual identity and website that reflects the nature of her sophisticated work and provides a platform for her other legal practices. The result was a minimalistic identity design with her initials.
+                    Davina Amiri is a transactional attorney, focusing on Entertainment, Intellectual Property, Real Estate and Business matters since 2006. She negotiates agreements on behalf of artists such as musicians, film makers, entrepreneurs, and designers to name a few. Davina provides legal counsel to a vast breath of businesses such as talent agencies, management, production and technology companies or start-ups in New York.<br/>
+                    <br/>Davina commissioned Rosa to develop a visual identity and website that reflects the nature of her sophisticated work and provides a platform for her other legal practices. The result was a minimalistic identity design with her initials.
                 </p>
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.davinaamirilaw.com/" class="smallFontBy08">www.davinaamirilaw.com</a>
+                <a href="http://www.davinaamirilaw.com/" class="smallFontBy08">davinaamirilaw.com</a>
             </section>
-            
-            <!-- <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div> -->
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span class:"disciplines">Disciplines: Branding/Identity Design</span>
+                        <span>Disciplines: Branding/Identity Design</span>
                     </li>
                 </ul>
             </div>
