--- a/pages/portfolio/readmore.html
+++ b/pages/portfolio/readmore.html
@@ -1,12 +1,12 @@
-<li class="span4 mix illustration branding mix_all">
-    <a href="#pages/portfolio/project_10.html" data-destination="portfolio-items" data-insert="before">
-        <img src="http://placehold.it/390x300">
-        <div class="portfolio-overlay">
-            <h4>24 Clothes icons</h4>
-        </div>
-    </a>
+<li class="span4 mix branding">
+        <a href="#pages/portfolio/project_10.html" data-destination="portfolio-items" data-insert="before">
+            <img src="assets/images/pages/work/pocketsoho.png" width="390" height="300" alt="Unlikeness">
+            <div class="portfolio-overlay">
+                <h4>pocketSOHO | Identity Design</h4>
+            </div>
+        </a>
 </li>
-<li class="span4 mix branding typography illustration mix_all">
+<!-- <li class="span4 mix branding typography illustration mix_all">
     <a href="#pages/portfolio/project_11.html" data-destination="portfolio-items" data-insert="before">
         <img src="http://placehold.it/390x300">
         <div class="portfolio-overlay">
@@ -21,4 +21,4 @@
             <h4>Everyone</h4>
         </div>
     </a>
-</li>
+</li> -->
