--- a/index.html
+++ b/index.html
@@ -273,22 +273,25 @@
                         <img src="assets/images/pages/features/about04.png" alt="Resposive Design">
                         <h5>Web Design & Development</h5>
                         <p class="smallFontBy08 cutBy10">I create clean and simple designs for web and mobile projects from concept through launch. I focus on delivering audiences with beautiful, memorable, and easy-to-navigate online experiences.
-                        <!-- <br>
-                            <em class="points">Responsive & Mobile Ready Design</em> -->
+                        <br/>
+                            <em class="points">Responsive & Mobile Ready Design</em>
                         </p>
                     </div>
                     <div class="span4 center">
                         <img src="assets/images/pages/features/about05.png" alt="Logo">
                         <h5>Visual Identity Design</h5>
-                        <p class="smallFontBy08 cutBy10">I provide visual solution that best expresses your personality and business needs through compelling brand identity.
-                        <!-- <br>
-                            <em class="points">Logo, Stationary, Marketing Collateral Design</em> -->
+                        <p class="smallFontBy08 cutBy10">I provide visual solution that best expresses your personality and business needs through compelling brand identity. 
+                        <br/>
+                            <em class="points">Logo, Stationary, Marketing Collateral Design</em>
                         </p>
                     </div>
                     <div class="span4 center">
                         <img src="assets/images/pages/features/about07.png" alt="illustration">
                         <h5>Illustration</h5>
-                        <p class="smallFontBy08 cutBy10">I have highly refined conceptual and rendering skills for digital graphic and freehand illustration.</p>
+                        <p class="smallFontBy08 cutBy10">An illustration is a great way to add individual flare to your products. I create unique art pieces formed from traditional artistic materials to infuse originality into your brand.
+                        <br/>
+                            <em class="points">Digital & Freehand Illustration </em>
+                        </p>
                     </div>
                 </div>
                 <!-- Testemonials -->
