--- a/pages/portfolio/project_3.html
+++ b/pages/portfolio/project_3.html
@@ -8,33 +8,22 @@
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Escape The Grid 2</h5>
+            <h5>Davina Amiri Law</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Davina Amiri is a transactional attorney, focusing on Entertainment, Intellectual Property, Real Estate and Business matters since 2006. She negotiates agreements on behalf of artists such as musicians, film makers, entrepreneurs, and designers to name a few. Davina provides legal counsel to a vast breath of businesses such as talent agencies, management, production and technology companies or start-ups in New York.<br/>
+                    <br/>Davina commissioned Rosa to develop a visual identity and website that reflects the nature of her sophisticated work and provides a platform for her other legal practices. The result was a clean yet simple one-page website that echo's Davina's personality.
                 </p>
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <a href="#" class="smallFontBy08">davinaamirilaw.com</a>
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
-            
+
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Photography</span>
-                    </li>
-                    <li>
-                        <span>Illustration</span>
+                        <span>Disciplines: Website Design & Development</span>
                     </li>
                 </ul>
             </div>
