added another project image and removed underline from a hover.

--- a/pages/portfolio/project_2.html
+++ b/pages/portfolio/project_2.html
@@ -17,7 +17,7 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.architectsartist.com/" class="smallFontBy08">architectsartist.com</a>
+                <a href="http://www.architectsartist.com/" target="_blank" class="smallFontBy08">architectsartist.com</a>
             </section>
             
             <div class="submenu">
