--- a/pages/portfolio/project_3.html
+++ b/pages/portfolio/project_3.html
@@ -1,7 +1,7 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/dawebsite.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
@@ -17,7 +17,7 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">davinaamirilaw.com</a>
+                <a href="#" class="http://www.davinaamirilaw.com/" target="_blank">davinaamirilaw.com</a>
             </section>
 
             <div class="submenu">
