--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -17,7 +17,7 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.davinaamirilaw.com/" class="smallFontBy08">davinaamirilaw.com</a>
+                <a href="http://www.davinaamirilaw.com/" target="_blank" class="smallFontBy08">davinaamirilaw.com</a>
             </section>
             
             <div class="submenu">
