--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/style/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="assets/style/rosatheme.css" type="text/css" />
+
+    <!-- Icons/Glyphs -->
+    <link href="assets/fonts/fontello.css" rel="stylesheet">
     
     <!-- GOOGLE WEB FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,300,800' rel='stylesheet' type='text/css'>
