--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -18,6 +18,7 @@
             <section class="website">
                 <h5>Visit site</h5>
                 <a href="http://www.davinaamirilaw.com/" target="_blank" class="smallFontBy08">davinaamirilaw.com</a>
+                <a href="https://www.behance.net/gallery/17754911/Davina-Amiri-Law-Website-" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a>
             </section>
             
             <div class="submenu">
