added behance icon on project page.

--- a/pages/portfolio/project_4.html
+++ b/pages/portfolio/project_4.html
@@ -17,8 +17,8 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.davinaamirilaw.com/" target="_blank" class="smallFontBy08">davinaamirilaw.com</a>
-                <a href="https://www.behance.net/gallery/17754911/Davina-Amiri-Law-Website-" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a>
+                <p><a href="http://www.davinaamirilaw.com/" target="_blank" class="smallFontBy08">davinaamirilaw.com</a></p><br/>
+                <p><a href="https://www.behance.net/gallery/17754911/Davina-Amiri-Law-Website-" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
             
             <div class="submenu">
