changed the icon on service page.

--- a/pages/portfolio/project_2.html
+++ b/pages/portfolio/project_2.html
@@ -17,7 +17,8 @@
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.architectsartist.com/" target="_blank" class="smallFontBy08">architectsartist.com</a>
+                <p><a href="http://www.architectsartist.com/" target="_blank" class="smallFontBy08">architectsartist.com</a></p>
+                <p><a href="https://www.behance.net/gallery/18648215/Branding-Logo-Design-Architects-Artist" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
             
             <div class="submenu">
