added an image and content to aproject page 9 and updated README.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <h5>Web Design & Development</h5>
                         <p class="smallFontBy08 cutBy10">I create clean and simple designs for web and mobile projects from concept through launch. I focus on delivering audiences with beautiful, memorable, and easy-to-navigate online experiences.
                         <br/>
-                            <em class="points">Responsive & Mobile Ready Design</em>
+                            <em class="points">Responsive & Mobile Ready Sites</em>
                         </p>
                     </div>
                     <div class="span4 center">
@@ -294,7 +294,7 @@
                         <h5>Illustration</h5>
                         <p class="smallFontBy08 cutBy10">An illustration is a great way to add individual flare to your products. I create unique art pieces formed from traditional artistic materials to infuse originality into your brand.
                         <br/>
-                            <em class="points">Digital & Freehand Illustration </em>
+                            <em class="points">Digital & Freehand Illustration</em>
                         </p>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                                         <h5>Prof. Reindert Falkenburg | Author</h5>
                                     </div>
                                     <div class="item testimonial">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        I love the new website Rosa created for me. Rosa is impressive. She is an amazing combination of professionalism, skill, talent, value and is very personable. 
                                         <h5>Davina Amiri | Attorney</h5>
                                     </div>
                                 </div>
