--- a/pages/portfolio/project_3.html
+++ b/pages/portfolio/project_3.html
@@ -16,6 +16,11 @@
                 </p>
             </article>
             <section class="website">
+                <h5 class="testimonial">A Few Words from Davina Amiri</h5>
+                <p>“I love the new website Rosa created for me. Rosa is impressive. She is an amazing combination of professionalism, skill, talent, value and is very personable.”
+                </p> 
+            </section>
+            <section class="website">
                 <h5>Visit site</h5>
                 <p><a href="http://www.davinaamirilaw.com/" target="_blank" class="smallFontBy08">davinaamirilaw.com</a></p>
                 <p><a href="https://www.behance.net/gallery/17754911/Davina-Amiri-Law-Website-" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
