--- a/pages/portfolio/project_9.html
+++ b/pages/portfolio/project_9.html
@@ -1,38 +1,35 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/unlikeness.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Adobe Family. 1882</h5>
+            <h5>The Land of Unlikeness</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Prof. Reindert Falkenburg, Vice Provost at NYU Abu Dhabi, has been and remains a dear friend, and a special mentor to designer Rosa. For his new book, a ten-year labor of love, Prof. Falkenburg needed a cover illustration and he approached Rosa for the design. When asked if she was interested in creating this cover design, she didn't hesitate to say yes!<br/> Her mission was to create an illustration that captures the essence of the author’s interpretation of Hieronymus Bosch’s Garden of Earthly Delights. The author wanted an image to depict the Gestalt of the Mouth of Hell. He offers the interpretation that Bosch’s triptych should, or could, be read as a speculum of the infernal course mankind has taken in a world that is perverted by satanic forces. Our challenge was to create an image by using Bosch’s own triptych painting to illustrate the author’s interpretation.
                 </p>
             </article>
+
+            <section class="website">
+                <h5 class="testimonial">A Few Words from Reindert Falkenburg</h5>
+                <p>“Rosa Choi's design for the cover of my book ‘The Land of Unlikeness’ is a marvel of invention as it captures the essence of what I think the Garden of Earthly Delights, the famous painting of Hieronymus Bosch in the Prado Museum in Madrid, is about. It shows the enigmatic figure of a hybrid being - half human, half tree - that dominates the right wing of Bosch's painting; its bark-like legs stand on two wobbly ships with which it sails a frozen infernal sea. Instead of the musical instrument that rests on the head of the ‘Tree-man’ in the original, we see a shiny globe and an extensive paradisiacal garden, which in the original is at the center op the painting and which gives it its name and fame. The result of Rosa's inventive recombination of motifs from Bosch' own painting beautifully summarizes the essence of his work: that the image of the world as one huge pleasure garden is a dream of man's own libidinous imagination - in and around which the monstrous handyman of the devil are eager to take human souls to dance. Rosa's design articulates better than words the content of my study of Bosch's painting - what more can an author wish from a truly artistic designer.”
+                </p> 
+            </section>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <p><a href="http://nyuad.nyu.edu/en/academics/faculty/reindert-falkenburg.html" target="_blank" class="smallFontBy08">Reindert Falkenburg & The Land of Unlikeness</a></p>
+                <p><a href="https://www.behance.net/gallery/18645527/The-Land-of-Unlikeness-Book-Illustration" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Illustration</span>
-                    </li>
-                    <li>
-                        <span>Branding</span>
+                        <span>Disciplines: Illustration/Book Cover Illustration</span>
                     </li>
                 </ul>
             </div>
