--- a/pages/portfolio/project_6.html
+++ b/pages/portfolio/project_6.html
@@ -1,37 +1,35 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/locketbook.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>The Travelers</h5>
+            <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Rosa immediately fell in love with the manuscript for The Time Locket while considering to work on the cover art for author Deborah Quinn's self-published book. The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    <b/>The goal was to create a scaleable cover illustration/design for both e-book and print-on-demand formats. The author wanted a contemporary vibe, and graphic image that gives a nice visual punch, thereby capturing the curiosity and imagination of the Young Adult reading audience.
                 </p>
             </article>
             <section class="website">
-                <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <h5 class="testimonial">A Few Words from Deborah Quinn</h5>
+                <p>“Working with Rosa on the cover of The Time Locket was a fantastic experience, which isn't usually what people say about working with designers. She never dismissed my suggestions, even when it became clear that her original designs were the right way to go. I had no problems uploading her files to the various sites I was using for e-publishing and print-on-demand; she turned in beautiful work in a professional and timely manner. Rosa will be the designer I turn to for all my future projects, and in fact I've already recommended her to several other writers.”
+                </p> 
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
+            <section class="website">
+                <h5>Visit site</h5>
+                <p><a href="http://www.amazon.com/Time-Locket-Deborah-Quinn/dp/0989226212/ref=sr_1_1?s=books&ie=UTF8&qid=1406493991&sr=1-1&keywords=the+time+locket">The Time Locket</a></p>
+                <p><a href="https://www.behance.net/gallery/18647633/The-Time-Locket-Book-Jacket-Design" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
+            </section>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Photography</span>
+                        <span>Disciplines: Illustration/Book Jacket Illustration</span>
                     </li>
                 </ul>
             </div>
