added content and image for project page 11.

--- a/pages/portfolio/project_11.html
+++ b/pages/portfolio/project_11.html
@@ -1,41 +1,30 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/emergent.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Rum bottle</h5>
+            <h5>Emergent U.S. Literatures</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Emergent U.S. Literatures by Cyrus R. K. Patell introduces readers to the foundational writers and texts produced by four literary traditions associated with late-twentieth-century US multiculturalism. Examining writing by Native Americans, Hispanic Americans, Asian Americans, and gay and lesbian Americans after 1968, the author compares and historicizes what might be characterized as the minority literatures within “U.S. minority literature.” <br/>
+                    <br/>It was a great challenge to find a suitable image that reflects the diverse topic of this book and I thought an abtract art (original painting by <a href="http://www.architectsartist.com/">Wasel Choi</a>) is the best way to convey author's idea of how the literary marginalization and cultura hybridity combine to create th grounds fo literature that is truly "emergent."
                 </p>
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <p><a href="http://nyupress.org/books/book-details.aspx?bookId=12689#.VBHw5y5dWzk" target="_blank">Emergetn U.S. Literatures</a></p>
+                <!-- <p><a href="https://www.behance.net/gallery/18645527/The-Land-of-Unlikeness-Book-Illustration" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p> -->
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Branding</span>
-                    </li>
-                    <li>
-                        <span>Typography</span>
-                    </li>
-                    <li>
-                        <span>Illustration</span>
+                        <span>Disciplines: Illustration/Book Cover Art</span>
                     </li>
                 </ul>
             </div>
