--- a/pages/portfolio/project_6.html
+++ b/pages/portfolio/project_6.html
@@ -11,7 +11,7 @@
             <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    Rosa immediately fell in love with the manuscript for The Time Locket while considering to work on the cover art for author Deborah Quinn's self-published book. The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
                     <b/>The goal was to create a scaleable cover illustration/design for both e-book and print-on-demand formats. The author wanted a contemporary vibe, and graphic image that gives a nice visual punch, thereby capturing the curiosity and imagination of the Young Adult reading audience.
                 </p>
             </article>
@@ -22,7 +22,7 @@
             </section>
             <section class="website">
                 <h5>Visit site</h5>
-                <p><a href="http://www.amazon.com/Time-Locket-Deborah-Quinn/dp/0989226212/ref=sr_1_1?s=books&ie=UTF8&qid=1406493991&sr=1-1&keywords=the+time+locket">The Time Locket</a></p>
+                <p><a href="http://www.amazon.com/Time-Locket-Deborah-Quinn/dp/0989226212/ref=sr_1_1?s=books&ie=UTF8&qid=1406493991&sr=1-1&keywords=the+time+locket" target="_blank">The Time Locket</a></p>
                 <p><a href="https://www.behance.net/gallery/18647633/The-Time-Locket-Book-Jacket-Design" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
             
