changed image to jpg format.

--- a/pages/portfolio/project_11.html
+++ b/pages/portfolio/project_11.html
@@ -12,7 +12,7 @@
             <article class="smallFontBy08">
                 <p>
                     Emergent U.S. Literatures by Cyrus R. K. Patell introduces readers to the foundational writers and texts produced by four literary traditions associated with late-twentieth-century US multiculturalism. Examining writing by Native Americans, Hispanic Americans, Asian Americans, and gay and lesbian Americans after 1968, the author compares and historicizes what might be characterized as the minority literatures within “U.S. minority literature.” <br/>
-                    <br/>It was a great challenge to find a suitable image that reflects the diverse topic of this book and I thought an abtract art (original painting by <a href="http://www.architectsartist.com/">Wasel Choi</a>) is the best way to convey author's idea of how the literary marginalization and cultura hybridity combine to create th grounds fo literature that is truly "emergent."
+                    <br/>It was a great challenge to find a suitable image that reflects the diverse topic of this book and I thought an abtract art (original painting by <a class="wasel" href="http://www.architectsartist.com/" target="_blank">Wasel Choi</a>) is the best way to convey author's idea of how the literary marginalization and cultura hybridity combine to create th grounds fo literature that is truly "emergent."
                 </p>
             </article>
             <section class="website">
