added images and content for Project 7 and styled blog page.

--- a/pages/portfolio/project_7.html
+++ b/pages/portfolio/project_7.html
@@ -1,43 +1,29 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/ttl.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Tron 3</h5>
+            <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </p>
+                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    <b/>The goal was to create a period approperiate logo for Deborah's website that encompasses Renaissance typeface with Victorian-Era patterns.
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <p><a href="http://www.thetimelocket.com">The Time Locket</a></p>
+                <p><a href="https://www.behance.net/gallery/18632813/The-Time-Locket-Logo" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Illustration</span>
-                    </li>
-                    <li>
-                        <span>Typography</span>
-                    </li>
-                    <li>
-                        <span>Branding</span>
+                        <span>Disciplines: Branding/Identity Design</span>
                     </li>
                 </ul>
             </div>
