--- a/pages/portfolio/project_9.html
+++ b/pages/portfolio/project_9.html
@@ -11,7 +11,7 @@
             <h5>The Land of Unlikeness</h5>
             <article class="smallFontBy08">
                 <p>
-                    Prof. Reindert Falkenburg, Vice Provost at NYU Abu Dhabi, has been and remains a dear friend, and a special mentor to designer Rosa. For his new book, a ten-year labor of love, Prof. Falkenburg needed a cover illustration and he approached Rosa for the design. When asked if she was interested in creating this cover design, she didn't hesitate to say yes!<br/> 
+                    Prof. Reindert Falkenburg, Vice Provost at NYU Abu Dhabi, has been and remains a dear friend, and a special mentor. For his new book, a ten-year labor of love, Prof. Falkenburg needed a cover illustration and he approached me for the design. When asked if I were interested in creating this cover design, I didn't hesitate to say yes!<br/> 
                     <br>The goal was to create an illustration that captures the essence of the author’s interpretation of Hieronymus Bosch’s Garden of Earthly Delights. The author wanted an image to depict the Gestalt of the Mouth of Hell. He offers the interpretation that Bosch’s triptych should, or could, be read as a speculum of the infernal course mankind has taken in a world that is perverted by satanic forces. My challenge was to create an image by using Bosch’s own triptych painting to illustrate the author’s interpretation.
                 </p>
             </article>
