added images and content for project 2.

--- a/pages/portfolio/project_1.html
+++ b/pages/portfolio/project_1.html
@@ -11,30 +11,20 @@
             <h5>Architect's Artist</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Architect's Artist Wasel Choi is an established artist whose artwork has successfully grown to encompass his passion for art and architecture. He enjoys composing sharp contrasting volumes, shapes and colors on a large canvas and three-dimensional objects. Wasel has partnered with some of the big international brands to create collaborative art works for public and private clients, including Nissan, CapitaLand and Formula 1. His works are in the permanent collections of corporations, museums, hotels, cultural organizations, residential developments and dignitaries.<br/>
+                    <br/>Wasel Choi commissioned Rosa to develop a visual identity and website that presents the whole spectrum of his art career and provides a platform for his other projects.
                 </p>
             </article>
-            <section class="website">
+             <section class="website">
                 <h5>Visit site</h5>
-                <a href="http://www.architectsartist.com/" class="smallFontBy08">www.architectsartist.com</a>
+                <p><a href="http://www.architectsartist.com/" target="_blank" class="smallFontBy08">architectsartist.com</a></p>
+                <!-- <p><a href="https://www.behance.net/gallery/18648215/Branding-Logo-Design-Architects-Artist" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p> -->
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>llustration</span>
-                    </li>
-                    <li>
-                        <span>Brending</span>
+                        <span>Website/ Web Design & Development</span>
                     </li>
                 </ul>
             </div>
