added image and content for project 10.

--- a/pages/portfolio/project_5.html
+++ b/pages/portfolio/project_5.html
@@ -8,36 +8,22 @@
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>A Brighter Horizon</h5>
+            <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    <b/>The goal was to create an online extension of the book, The Time Locket. The author also commissioned me to do two illustration pieces for the website.
                 </p>
             </article>
             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <a href="http://thetimelocket.com/" class="smallFontBy08">thetimelocket.com</a>
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-linkedin"><i>LinkedIn</i></a>
-                <a href="#" class="sicon-white sicon-youtube"><i>Youtube</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
             
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Photography</span>
-                    </li>
-                    <li>
-                        <span>Typography</span>
-                    </li>
-                    <li>
-                        <span>Branding</span>
+                        <span>Disciplines: Website/Website Design & Development</span>
                     </li>
                 </ul>
             </div>
